src/objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Delayed Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Date Approaching</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <picklist>
            <picklistValues>
                <fullName>Same Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start After Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finish Before Start</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Please select Time Dependency or Same Day or Same Reosurce .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDueDateExist</fullName>
        <active>false</active>
        <description>Check if DueDate field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>DueDate field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isEarliestStartTimeExist</fullName>
        <active>false</active>
        <description>Check if EarliestStartTime field exist on service appointment.</description>
        <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>EarliestStartTime field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
        <active>false</active>
        <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
    </validationRules>
</CustomObject>